--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberInfoList/MemberInfoList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberInfoList/MemberInfoList.cshtml
@@ -232,14 +232,19 @@
              $.ajax({
                 url: '@ClientRoute.GenerateUrl(this, "MemberInfoList", "SetInfoHaveReadByMember")',
                  type: 'POST',
-                 data: { "mailInfoType": $this.find('[data-mailType]').text(), "recordNumber": $this.find('[data-recordnum]').data('recordnum') },
+                 data: { "mailInfoType": $this.find('[data-mailType]').text(), "recordNumber": $this.find('[data-recordnum]').data('recordnum'),
+                 "pageUrl": window.location.pathname + window.location.search},
                  beforeSend: function () { window.loading('show'); },
                  success : function(data, textStatus, jqXHR) {
                         if (data && data.success) {
                             window.ResetMailInfoTable();
                             window.ResetTopInfoList();
                             window.loading('hide');
-                       }
+                       }else if(!data.success && data.block)
+                        {
+                            window.VerifyLoginRedirctToHome(data.success);
+                            return;
+                        }
                  },
                  error: function (jqXHR, textStatus, errorThrown) { },
                  complete: function () { $('.c-loading').loading('hide'); }
@@ -253,12 +258,17 @@
                 url: '@ClientRoute.GenerateUrl(this, "MemberInfoList", "SetAllInfoHaveReadByMember")',
                  type: 'POST',
                  beforeSend: function () { window.loading('show'); },
+                 data : {"pageUrl": window.location.pathname + window.location.search},
                  success : function(data, textStatus, jqXHR) {
                         if (data && data.success) {
                             window.ResetMailInfoTable();
                             window.ResetTopInfoList();
                             window.loading('hide');
-                       }
+                       }else if(!data.success && data.block)
+                        {
+                            window.VerifyLoginRedirctToHome(data.success);
+                            return;
+                        }
                  },
                  error: function (jqXHR, textStatus, errorThrown) { },
                  complete: function () { $('.c-loading').loading('hide'); }
