--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/Oauth/Oauth.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/Oauth/Oauth.cshtml
@@ -11,17 +11,19 @@
 </body>
 </html>
 <script>
-  let xhr = new XMLHttpRequest();
-  xhr.open('post', '@ClientRoute.GenerateUrl(this, "Accounts", "GetUrlCookie")', true);
-  xhr.send(null);
-  xhr.onload = function() {
-      let res = JSON.parse(xhr.responseText);
-      if (res.url == '') {
-          let homePage = new URL(location.protocol + "//" +location.hostname);
-          location.href = homePage;
-      } else {
-          const url = new URL(res.url);
-          location.href = url;
-      }
-  }
+    let xhr = new XMLHttpRequest();
+    xhr.open('post', '@ClientRoute.GenerateUrl(this, "Accounts", "GetUrlCookie")', true);
+    let data = { unlockBlock : true };
+    xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+    xhr.send(JSON.stringify(data));
+    xhr.onload = function() {
+        let res = JSON.parse(xhr.responseText);
+        if (res.url == '') {
+            let homePage = new URL(location.protocol + "//" +location.hostname);
+            location.href = homePage;
+        } else {
+            const url = new URL(res.url);
+            location.href = url;
+        }
+    }
 </script>
