--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
@@ -98,70 +98,20 @@
                                         <div class="l-form is-error" id="l-form-subject">
                                             <div class="l-form__item">
                                                 <div class="l-pickGroup l-pickGroup--form">
-                                                    <div class="l-pickGroup__item">
-                                                        <label class="o-checkbox">
-                                                            <input class="o-checkbox__input" type="checkbox" value="投資市場諮詢" data-subject>
-                                                            <div class="o-checkbox__text">
-                                                                投資市場諮詢
+                                                    @if (Model.SubjectList != null)
+                                                    {
+                                                        foreach (var item in Model.SubjectList)
+                                                        {
+                                                            <div class="l-pickGroup__item">
+                                                                <label class="o-checkbox">
+                                                                    <input class="o-checkbox__input" type="checkbox" value="@item" data-subject>
+                                                                    <div class="o-checkbox__text">
+                                                                        @item
+                                                                    </div>
+                                                                </label>
                                                             </div>
-                                                        </label>
-                                                    </div>
-                                                    <div class="l-pickGroup__item">
-                                                        <label class="o-checkbox">
-                                                            <input class="o-checkbox__input" type="checkbox" value="投資組合建議" data-subject>
-                                                            <div class="o-checkbox__text">
-                                                                投資組合建議
-                                                            </div>
-                                                        </label>
-                                                    </div>
-                                                    <div class="l-pickGroup__item">
-                                                        <label class="o-checkbox">
-                                                            <input class="o-checkbox__input" type="checkbox" value="資產配置規劃" data-subject>
-                                                            <div class="o-checkbox__text">
-                                                                資產配置規劃
-                                                            </div>
-                                                        </label>
-                                                    </div>
-                                                    <div class="l-pickGroup__item">
-                                                        <label class="o-checkbox">
-                                                            <input class="o-checkbox__input" type="checkbox" value="稅務及資金規劃" data-subject>
-                                                            <div class="o-checkbox__text">
-                                                                稅務及資金規劃
-                                                            </div>
-                                                        </label>
-                                                    </div>
-                                                    <div class="l-pickGroup__item">
-                                                        <label class="o-checkbox">
-                                                            <input class="o-checkbox__input" type="checkbox" value="家族及企業財富傳承" data-subject>
-                                                            <div class="o-checkbox__text">
-                                                                家族及企業財富傳承
-                                                            </div>
-                                                        </label>
-                                                    </div>
-                                                    <div class="l-pickGroup__item">
-                                                        <label class="o-checkbox">
-                                                            <input class="o-checkbox__input" type="checkbox" value="退休理財規劃" data-subject>
-                                                            <div class="o-checkbox__text">
-                                                                退休理財規劃
-                                                            </div>
-                                                        </label>
-                                                    </div>
-                                                    <div class="l-pickGroup__item">
-                                                        <label class="o-checkbox">
-                                                            <input class="o-checkbox__input" type="checkbox" value="全方位理財健診" data-subject>
-                                                            <div class="o-checkbox__text">
-                                                                全方位理財健診
-                                                            </div>
-                                                        </label>
-                                                    </div>
-                                                    <div class="l-pickGroup__item">
-                                                        <label class="o-checkbox">
-                                                            <input class="o-checkbox__input" type="checkbox" value="投資研究報告" data-subject>
-                                                            <div class="o-checkbox__text">
-                                                                投資研究報告
-                                                            </div>
-                                                        </label>
-                                                    </div>
+                                                        }
+                                                    }
                                                 </div>
                                             </div>
                                             <div class="l-form__text l-form__text--error">
