update: 近五年移除漲跌幅號、呼叫列印、列印畫面移除麵包屑及分享

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundCloseFiveYears.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundCloseFiveYears.cshtml
@@ -5,7 +5,11 @@
     var FundSameLevelApiUrl = ClientRoute.GenerateUrl(this, "FundDetail", "GetSameLevelFund");
     var detailsUrl = FundRelatedSettingModel.GetFundDetailsUrl();
 }
-
+<style>
+    .o-rise:before, .o-fall:before {
+        content: '' !important;
+    }
+</style>
 <div class="l-mainstage">
     <div class="l-mainstage__wrap">
         <div class="l-mainstage__title">
