修改搜尋結果文字

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
@@ -101,7 +101,7 @@
                                 <!-- 大小網展開收合功能觸發點[data-filter-collapse] -->
                                 <div class="c-filter__total" data-filter-collapse>
                                     <div class="o-total o-total--wt">
-                                        共<span id="uid-total">0</span>檔股票
+                                        搜尋國外股票<span id="uid-total">0</span>筆
                                     </div>
                                 </div>
                             </div>
@@ -141,7 +141,7 @@
                 <div class="l-filter__tool">
                     <div class="l-filter__total">
                         <div class="o-total">
-                            共<span id="uid-total">0</span>檔股票
+                            搜尋國外股票<span id="uid-total">0</span>筆
                         </div>
                     </div>
                     <div class="l-filter__reset">
